k8s/default/website.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cli-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.staging.netsoc.ie/cli/?$'
    replacement: 'https://github.com/netsoc/cli/releases/latest'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: meetings-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.staging.netsoc.ie/meeting/?$'
    replacement: 'https://tcd-ie.zoom.us/j/97182874403?pwd=ZW9CSHdEZTVRSWVOMmZsU3hsbVRwdz09'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: events-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.staging.netsoc.ie/event/?$'
    replacement: 'https://tcd-ie.zoom.us/j/8820425304?pwd=OFdSK3M3UWJDRkZ1NXlUbTBicFNodz09'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: www-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://staging.netsoc.ie/(.*)'
    replacement: 'https://www.staging.netsoc.ie/${1}'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: www-redirect
  namespace: default
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`staging.netsoc.ie`)
    kind: Rule
    services:
    - name: noop@internal
      kind: TraefikService
    middlewares:
    - name: www-redirect
      namespace: default
  tls:
    secretName: tls-staging
    domains:
    - main: 'staging.netsoc.ie'
      sans:
      - '*.staging.netsoc.ie'
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tcd-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://(.*)netsoc.tcd.ie/(.*)'
    replacement: 'https://${1}staging.netsoc.ie/${2}'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tcd-redirect
  namespace: default
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`netsoc.tcd.ie`) || Host(`www.netsoc.tcd.ie`)
    kind: Rule
    services:
    - name: noop@internal
      kind: TraefikService
    middlewares:
    - name: tcd-redirect
      namespace: default
  tls:
    secretName: tls-tcd
    domains:
    - main: 'netsoc.tcd.ie'
      sans:
      - '*.netsoc.tcd.ie'
